Testear cosas selenium soluciones

--- a/TestearCosas/test-output/emailable-report.html
+++ b/TestearCosas/test-output/emailable-report.html
@@ -9,10 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">75</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">134</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestearCosas.TestearCosas.Tests</td><td><a href="#m0">testNumeroVerdadero</a></td><td rowspan="1">1545905421162</td><td rowspan="1">21</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">TestearCosas.TestearCosas.Tests</td><td><a href="#m0">mismoObjeto</a></td><td rowspan="1">1546817162487</td><td rowspan="1">26</td></tr><tr class="passedeven"><td><a href="#m1">noMismoObjeto</a></td><td rowspan="1">1546817162525</td><td rowspan="1">6</td></tr><tr class="passedeven"><td><a href="#m2">testDeNulo</a></td><td rowspan="1">1546817162538</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m3">testNulo</a></td><td rowspan="1">1546817162547</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m4">testNumeroFalso</a></td><td rowspan="1">1546817162551</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m5">testNumeroVerdadero</a></td><td rowspan="1">1546817162555</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m6">testNumerosIguales</a></td><td rowspan="1">1546817162562</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m7">testNumerosNoIguales</a></td><td rowspan="1">1546817162568</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TestearCosas.TestearCosas.Tests#testNumeroVerdadero</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">TestearCosas.TestearCosas.Tests#mismoObjeto</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestearCosas.TestearCosas.Tests#noMismoObjeto</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestearCosas.TestearCosas.Tests#testDeNulo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestearCosas.TestearCosas.Tests#testNulo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">TestearCosas.TestearCosas.Tests#testNumeroFalso</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">TestearCosas.TestearCosas.Tests#testNumeroVerdadero</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">TestearCosas.TestearCosas.Tests#testNumerosIguales</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">TestearCosas.TestearCosas.Tests#testNumerosNoIguales</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
