--- a/TestearCosas/test-output/index.html
+++ b/TestearCosas/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,42 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestearCosas.TestearCosas.Tests" hash-for-method="mismoObjeto">mismoObjeto</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestearCosas.TestearCosas.Tests" hash-for-method="noMismoObjeto">noMismoObjeto</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestearCosas.TestearCosas.Tests" hash-for-method="testDeNulo">testDeNulo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestearCosas.TestearCosas.Tests" hash-for-method="testNulo">testNulo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestearCosas.TestearCosas.Tests" hash-for-method="testNumeroFalso">testNumeroFalso</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestearCosas.TestearCosas.Tests" hash-for-method="testNumeroVerdadero">testNumeroVerdadero</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestearCosas.TestearCosas.Tests" hash-for-method="testNumerosIguales">testNumerosIguales</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestearCosas.TestearCosas.Tests" hash-for-method="testNumerosNoIguales">testNumerosNoIguales</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +160,58 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="mismoObjeto">
+                  </a> <!-- mismoObjeto -->
+                  <span class="method-name">mismoObjeto</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="noMismoObjeto">
+                  </a> <!-- noMismoObjeto -->
+                  <span class="method-name">noMismoObjeto</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testDeNulo">
+                  </a> <!-- testDeNulo -->
+                  <span class="method-name">testDeNulo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testNulo">
+                  </a> <!-- testNulo -->
+                  <span class="method-name">testNulo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testNumeroFalso">
+                  </a> <!-- testNumeroFalso -->
+                  <span class="method-name">testNumeroFalso</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="testNumeroVerdadero">
                   </a> <!-- testNumeroVerdadero -->
                   <span class="method-name">testNumeroVerdadero</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testNumerosIguales">
+                  </a> <!-- testNumerosIguales -->
+                  <span class="method-name">testNumerosIguales</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testNumerosNoIguales">
+                  </a> <!-- testNumerosNoIguales -->
+                  <span class="method-name">testNumerosNoIguales</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +219,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse--177067112/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse-1120102488/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,16 +268,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testNumeroVerdadero')
+data.setCell(0, 1, 'mismoObjeto')
 data.setCell(0, 2, 'TestearCosas.TestearCosas.Tests')
-data.setCell(0, 3, 21);
+data.setCell(0, 3, 26);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'noMismoObjeto')
+data.setCell(1, 2, 'TestearCosas.TestearCosas.Tests')
+data.setCell(1, 3, 6);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testDeNulo')
+data.setCell(2, 2, 'TestearCosas.TestearCosas.Tests')
+data.setCell(2, 3, 5);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testNumeroVerdadero')
+data.setCell(3, 2, 'TestearCosas.TestearCosas.Tests')
+data.setCell(3, 3, 4);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'testNumerosIguales')
+data.setCell(4, 2, 'TestearCosas.TestearCosas.Tests')
+data.setCell(4, 3, 3);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'testNumerosNoIguales')
+data.setCell(5, 2, 'TestearCosas.TestearCosas.Tests')
+data.setCell(5, 3, 2);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'testNulo')
+data.setCell(6, 2, 'TestearCosas.TestearCosas.Tests')
+data.setCell(6, 3, 2);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'testNumeroFalso')
+data.setCell(7, 2, 'TestearCosas.TestearCosas.Tests')
+data.setCell(7, 3, 2);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 ms</span>
+              <span class="suite-total-time">Total running time: 50 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,8 +333,36 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">TestearCosas.TestearCosas.Tests</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testNumeroVerdadero</span>
+                <span class="method-name">mismoObjeto</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">noMismoObjeto</span>
+                <span class="method-start">38 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testDeNulo</span>
+                <span class="method-start">51 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testNulo</span>
+                <span class="method-start">60 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testNumeroFalso</span>
+                <span class="method-start">64 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testNumeroVerdadero</span>
+                <span class="method-start">68 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testNumerosIguales</span>
+                <span class="method-start">75 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testNumerosNoIguales</span>
+                <span class="method-start">81 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
