--- a/TestearCosas/test-output/old/Default suite/methods.html
+++ b/TestearCosas/test-output/old/Default suite/methods.html
@@ -1,6 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7471b5">  <td>18/12/27 11:10:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.testNumeroVerdadero()[pri:0, instance:TestearCosas.TestearCosas.Tests@36d4b5c]">testNumeroVerdadero</td> 
-  <td>main@1418621776</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/01/07 00:26:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.mismoObjeto()[pri:0, instance:TestearCosas.TestearCosas.Tests@29774679]">mismoObjeto</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/01/07 00:26:02</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.noMismoObjeto()[pri:0, instance:TestearCosas.TestearCosas.Tests@29774679]">noMismoObjeto</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/01/07 00:26:02</td>   <td>52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.testDeNulo()[pri:0, instance:TestearCosas.TestearCosas.Tests@29774679]">testDeNulo</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/01/07 00:26:02</td>   <td>61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.testNulo()[pri:0, instance:TestearCosas.TestearCosas.Tests@29774679]">testNulo</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/01/07 00:26:02</td>   <td>65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.testNumeroFalso()[pri:0, instance:TestearCosas.TestearCosas.Tests@29774679]">testNumeroFalso</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/01/07 00:26:02</td>   <td>69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.testNumeroVerdadero()[pri:0, instance:TestearCosas.TestearCosas.Tests@29774679]">testNumeroVerdadero</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/01/07 00:26:02</td>   <td>76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.testNumerosIguales()[pri:0, instance:TestearCosas.TestearCosas.Tests@29774679]">testNumerosIguales</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/01/07 00:26:02</td>   <td>82</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.testNumerosNoIguales()[pri:0, instance:TestearCosas.TestearCosas.Tests@29774679]">testNumerosNoIguales</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
 </table>
